--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Animal Buttons</title>
+  <title>gif Buttons</title>
   <!-- <link rel="stylesheet" href="assets/css/reset.css"> -->
 
     <!-- Optional theme -->
@@ -47,11 +47,15 @@
 					<label for="searchTerm">Search Term:</label>
 					<input type="text" class="form-control" id="searchInput" placeholder="">
 
-					  <br>
+                      <button id="search-button" data-gif="tiger">Tiger</button>
+                      <button id="search-button" data-gif="penguin">Penguin</button>
+                      <button id="search-button" data-gif="soccer">Soccer</button>
+                      <button id="search-button" data-gif="drake">Drake</button>
 
-					  
+						<button type="submit" class="btn btn-default" id="searchButton">
+						  		<span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
+						 </button>
 
-                      <button id="search-button" data-animal="tiger">Tiger</button>
 				  </div> 
 
                  </div>
@@ -68,16 +72,15 @@
   <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script type="text/javascript">
     $("button").on("click", function() {
-      var animal = $(this).attr("data-animal");
+      var gif = $(this).attr("data-gif");
       var queryURL = "http://api.giphy.com/v1/gifs/search?q=" +
-        animal + "&api_key=dc6zaTOxFJmzC&limit=10";
+        gif + "&api_key=dc6zaTOxFJmzC&limit=10";
 
       $.ajax({
         url: queryURL,
         method: "GET"
       }).done(function(response) {
-        // Step 1: Run this file, click a button, and see what the response object looks like in the browser's console.
-        // Open up the data key, then open up the 0th, element. Study the keys and how the JSON is structured.
+      
         console.log(response);
 
         var results = response.data;
