--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 						<button type="submit" class="btn btn-default" id="searchButton">
 						  		<span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
-						 </button>
+						</button>
 
 				  </div> 
 
@@ -71,6 +71,39 @@
 
   <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script type="text/javascript">
+  	$("searchButton").on("click"), function(){
+  		var gif = $("#searchInput").val();
+  		var gif = $(this).attr("data-gif");
+      var queryURL = "http://api.giphy.com/v1/gifs/search?q=" +
+        gif + "&api_key=dc6zaTOxFJmzC&limit=10";
+
+      $.ajax({
+        url: queryURL,
+        method: "GET"
+      }).done(function(response) {
+      
+        console.log(response);
+
+        var results = response.data;
+
+        for (var i = 0; i < results.length; i++){
+          var gifDiv = $("<div class='item'>");
+
+          var rating = results[i].rating;
+
+          var p = $("<p>").text("Rating: " + rating);
+
+          var personImage = $("<img>");
+          personImage.attr("src", results[i].images.fixed_height.url);
+
+          gifDiv.prepend(p);
+          gifDiv.prepend(personImage);
+
+          $("#gifs-appear-here").prepend(gifDiv);
+        }
+      });
+  	}
+
     $("button").on("click", function() {
       var gif = $(this).attr("data-gif");
       var queryURL = "http://api.giphy.com/v1/gifs/search?q=" +
